[package]
name = "vecdraw"
version = "0.1.0"
authors = ["Paul Butler <paulgb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.5.1", features = ["derive"] }
cgmath = "0.18.0"
env_logger = "0.8.3"
futures = "0.3.15"
palette = { version = "0.5.0", features = ["named"] }
wgpu = "0.8.1"
winit = "0.25.0"

[build-dependencies]
anyhow = "1.0.40"
fs_extra = "1.2.0"
glob = "0.3.0"
rayon = "1.5.1"
shaderc = "0.7.2"

[dev-dependencies]
chrono = "0.4.19"
clap = "3.0.0-beta.2"
rand = "0.8.3"
